--- a/algolia_restaurant_search/package.json
+++ b/algolia_restaurant_search/package.json
@@ -7,7 +7,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "stickybits": "^2.0.13"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
