--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://drstonebraker.github.io/restaurant-search",
+  "homepage": "http://drstonebraker.github.io/restaurant-search",
   "name": "algolia_restaurant_search",
   "version": "0.1.0",
   "private": true,
@@ -21,5 +21,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
