--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Restaurant Locator",
+  "short_name": "Cool eats!",
   "name": "Restaurant Locator - by Algolia",
   "icons": [
     {
